Bola de Berlim - LP - Initial Commit

--- a/bola_berlim.html
+++ b/bola_berlim.html
@@ -4,16 +4,17 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Mudaki - LP</title>
+        <title>Bola de Berlim - LP</title>
         <link rel="stylesheet" href="/css/mudaki.css">
     </head>
 
     <body>
 
-        <section class="lp-header">
+        <section class="lp-header-bola-berlim">
+
             <div class="grid">
                 <div class="half-column header-image">
-                    <img src="assets/mudaki/header_Imaage_mudaki.jpg" />
+                    <img class="main-image" src="assets/bola_de_berlim/header_main.jpg" />
                 </div>
 
                 <div class="half-column header-text">
@@ -21,29 +22,30 @@
                         <div class="main-text-svg">
 
                             <picture>
-                                <source srcset="/assets/mudaki/mudaki_text.svg" media="(max-width: 767px)">
-                                <source srcset="/assets/mudaki/mudaki_text_2.svg" media="(min-width: 768px)">
-                                <img class="text-svg" src="/assets/mudaki/mudaki_text_2.svg" alt="" srcset="">
+                                <img class="text-svg" src="/assets/bola_de_berlim/bola_berlim_text.svg" alt=""
+                                    srcset="">
                             </picture>
-                            <!-- <img class="logo-svg" src="/assets/mudaki/kk_logo.svg" alt="" srcset=""> -->
                         </div>
                     </div>
-                    <button class="lp-primary">sabe mais</button>
+                    <button class="lp-primary primary btn_center">sabe mais</button>
                 </div>
 
+             
             </div>
 
         </section>
 
-        <section class="lp-content lp-big-images">
+
+        <section class="lp-content lp-grid-images">
             <div class="lp-title-group">
                 <h2 class="lp-title">Lorem ipsum dolor sit amet, consectetur adipiscing</h2>
                 <p class="lp-subtitle">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia.</p>
             </div>
 
             <div class="lp-images-group">
-                <a href="/"><img src="/assets/mudaki/moda-acessorios.png"></a>
-                <a href="/"><img src="/assets/mudaki/cultura-lazer.png"></a>
+                <a class="big-image" href="/"><img src="/assets/bola_de_berlim/moda_acessorios.png"></a>
+                <a class="small-image" href="/"><img src="/assets/bola_de_berlim/smartphones.png"></a>
+                <a class="small-image" href="/"><img src="/assets/bola_de_berlim/imagem_e_som.png"></a>
             </div>
         </section>
 
@@ -55,27 +57,31 @@
             <div class="carrousel">
                 <a href="" class="lp-product-card">
                     <div class="lp-product-image">
-                        <img src="/assets/mudaki/productos/prod_1.png">
+                        <img src="/assets/bola_de_berlim/produtos/p1.jpg">
                     </div>
-                    <h4>Inspirações Portuguesas</h4>
+                    <h4>After Sun em
+                        Gel Corporal</h4>
                 </a>
                 <a href="" class="lp-product-card">
                     <div class="lp-product-image">
-                        <img src="/assets/mudaki/productos/prod_2.png">
+                        <img src="/assets/bola_de_berlim/produtos/p2.jpg">
                     </div>
-                    <h4>Kariban</h4>
+                    <h4>Autobronzeadores
+                        em Creme Corporal</h4>
                 </a>
                 <a href="" class="lp-product-card">
                     <div class="lp-product-image">
-                        <img src="/assets/mudaki/productos/prod_3.png">
+                        <img src="/assets/bola_de_berlim/produtos/p3.jpg">
                     </div>
-                    <h4>Pitada</h4>
+                    <h4>Protetores Solares
+                        em Gel Corporal</h4>
                 </a>
                 <a href="" class="lp-product-card">
                     <div class="lp-product-image">
-                        <img src="/assets/mudaki/productos/prod_4.png">
+                        <img src="/assets/bola_de_berlim/produtos/p4.jpg">
                     </div>
-                    <h4>Gwery</h4>
+                    <h4>After Sun em
+                        Creme Corporal</h4>
                 </a>
             </div>
         </section>
@@ -86,46 +92,9 @@
                 <p class="lp-subtitle">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia.</p>
             </div>
             <div class="lp-images-group">
-                <a href="/"><img src="/assets/mudaki/homem.png"></a>
-                <a href="/"><img src="/assets/mudaki/mulher.png"></a>
-                <a href="/"><img src="/assets/mudaki/crianca.png"></a>
-            </div>
-        </section>
-
-        <section class="lp-content lp-product-carrousel">
-            <div class="lp-title-group">
-                <h2 class="lp-title">Lorem ipsum dolor sit amet, consectetur adipiscing</h2>
-                <p class="lp-subtitle">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia.</p>
-            </div>
-            <div class="carrousel">
-                <a href="" class="lp-product-card">
-                    <div class="lp-product-image">
-                        <img src="/assets/mudaki/productos/p1.png">
-                    </div>
-                    <h4>Swimwear
-                        para Homem</h4>
-                </a>
-                <a href="" class="lp-product-card">
-                    <div class="lp-product-image">
-                        <img src="/assets/mudaki/productos/p2.png">
-                    </div>
-                    <h4>Fatos de Banho
-                        e Biquínis</h4>
-                </a>
-                <a href="" class="lp-product-card">
-                    <div class="lp-product-image">
-                        <img src="/assets/mudaki/productos/p3.png">
-                    </div>
-                    <h4>Fatos de Banho
-                        Infantis</h4>
-                </a>
-                <a href="" class="lp-product-card">
-                    <div class="lp-product-image">
-                        <img src="/assets/mudaki/productos/p4.png">
-                    </div>
-                    <h4>Fatos de Banho
-                        e Biquínis</h4>
-                </a>
+                <a href="/"><img src="/assets/bola_de_berlim/desporto.png"></a>
+                <a href="/"><img src="/assets/bola_de_berlim/informatica.png"></a>
+                <a href="/"><img src="/assets/bola_de_berlim/animais.png"></a>
             </div>
         </section>
 
