Bola de Berlim - LP - Add missing Carrousel

--- a/bola_berlim.html
+++ b/bola_berlim.html
@@ -98,6 +98,43 @@
             </div>
         </section>
 
+        <section class="lp-content lp-product-carrousel">
+            <div class="lp-title-group">
+                <h2 class="lp-title">Lorem ipsum dolor sit amet, consectetur adipiscing</h2>
+                <p class="lp-subtitle">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia.</p>
+            </div>
+            <div class="carrousel">
+                <a href="" class="lp-product-card">
+                    <div class="lp-product-image">
+                        <img src="/assets/bola_de_berlim/produtos/p1.jpg">
+                    </div>
+                    <h4>After Sun em
+                        Gel Corporal</h4>
+                </a>
+                <a href="" class="lp-product-card">
+                    <div class="lp-product-image">
+                        <img src="/assets/bola_de_berlim/produtos/p2.jpg">
+                    </div>
+                    <h4>Autobronzeadores
+                        em Creme Corporal</h4>
+                </a>
+                <a href="" class="lp-product-card">
+                    <div class="lp-product-image">
+                        <img src="/assets/bola_de_berlim/produtos/p3.jpg">
+                    </div>
+                    <h4>Protetores Solares
+                        em Gel Corporal</h4>
+                </a>
+                <a href="" class="lp-product-card">
+                    <div class="lp-product-image">
+                        <img src="/assets/bola_de_berlim/produtos/p4.jpg">
+                    </div>
+                    <h4>After Sun em
+                        Creme Corporal</h4>
+                </a>
+            </div>
+        </section>
+
         <section class="lp-content lp-newsletter">
             <div class="lp-newsletter-title">
                 <svg width="95" height="149" viewBox="0 0 95 149" fill="none" xmlns="http://www.w3.org/2000/svg">
