Bola de Berlim - LP - Fix header padding and button position

--- a/bola_berlim.html
+++ b/bola_berlim.html
@@ -27,7 +27,7 @@
                             </picture>
                         </div>
                     </div>
-                    <button class="lp-primary primary btn_center">sabe mais</button>
+                    <button class="lp-primary primary">sabe mais</button>
                 </div>
 
              
