--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <section class="lp-header">
             <div class="grid">
                 <div class="half-column header-image">
-                    <img src="assets/mudaki/header_Imaage_mudaki.jpg" />
+                    <img
+                        src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/mudaki/header_Imaage_mudaki.jpg" />
                 </div>
 
                 <div class="half-column header-text">
@@ -21,11 +22,17 @@
                         <div class="main-text-svg">
 
                             <picture>
-                                <source srcset="/assets/mudaki/mudaki_text.svg" media="(max-width: 767px)">
-                                <source srcset="/assets/mudaki/mudaki_text_2.svg" media="(min-width: 768px)">
-                                <img class="text-svg" src="/assets/mudaki/mudaki_text_2.svg" alt="" srcset="">
+                                <source
+                                    srcset="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/mudaki/mudaki_text.svg"
+                                    media="(max-width: 767px)">
+                                <source
+                                    srcset="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/mudaki/mudaki_text_2.svg"
+                                    media="(min-width: 768px)">
+                                <img class="text-svg"
+                                    src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/mudaki/mudaki_text_2.svg"
+                                    alt="" srcset="">
                             </picture>
-                            <!-- <img class="logo-svg" src="/assets/mudaki/kk_logo.svg" alt="" srcset=""> -->
+                            <!-- <img class="logo-svg" src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/mudaki/kk_logo.svg" alt="" srcset=""> -->
                         </div>
                     </div>
                     <button class="lp-primary">sabe mais</button>
@@ -42,8 +49,10 @@
             </div>
 
             <div class="lp-images-group">
-                <a href="/"><img src="/assets/mudaki/moda-acessorios.png"></a>
-                <a href="/"><img src="/assets/mudaki/cultura-lazer.png"></a>
+                <a href="/"><img
+                        src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/mudaki/moda-acessorios.png"></a>
+                <a href="/"><img
+                        src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/mudaki/cultura-lazer.png"></a>
             </div>
         </section>
 
@@ -53,27 +62,31 @@
                 <p class="lp-subtitle">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia.</p>
             </div>
             <div class="carrousel">
-                <a href="" class="lp-product-card">
+                <a href="#teste" class="lp-product-card">
                     <div class="lp-product-image">
-                        <img src="/assets/mudaki/productos/prod_1.png">
+                        <img
+                            src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/mudaki/prod_1.png">
                     </div>
                     <h4>Inspirações Portuguesas</h4>
                 </a>
-                <a href="" class="lp-product-card">
+                <a href="#teste" class="lp-product-card">
                     <div class="lp-product-image">
-                        <img src="/assets/mudaki/productos/prod_2.png">
+                        <img
+                            src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/mudaki/prod_2.png">
                     </div>
                     <h4>Kariban</h4>
                 </a>
-                <a href="" class="lp-product-card">
+                <a href="#teste" class="lp-product-card">
                     <div class="lp-product-image">
-                        <img src="/assets/mudaki/productos/prod_3.png">
+                        <img
+                            src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/mudaki/prod_3.png">
                     </div>
                     <h4>Pitada</h4>
                 </a>
-                <a href="" class="lp-product-card">
+                <a href="#teste" class="lp-product-card">
                     <div class="lp-product-image">
-                        <img src="/assets/mudaki/productos/prod_4.png">
+                        <img
+                            src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/mudaki/prod_4.png">
                     </div>
                     <h4>Gwery</h4>
                 </a>
@@ -86,9 +99,12 @@
                 <p class="lp-subtitle">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia.</p>
             </div>
             <div class="lp-images-group">
-                <a href="/"><img src="/assets/mudaki/homem.png"></a>
-                <a href="/"><img src="/assets/mudaki/mulher.png"></a>
-                <a href="/"><img src="/assets/mudaki/crianca.png"></a>
+                <a href="/"><img
+                        src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/mudaki/homem.png"></a>
+                <a href="/"><img
+                        src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/mudaki/mulher.png"></a>
+                <a href="/"><img
+                        src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/mudaki/crianca.png"></a>
             </div>
         </section>
 
@@ -98,30 +114,34 @@
                 <p class="lp-subtitle">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia.</p>
             </div>
             <div class="carrousel">
-                <a href="" class="lp-product-card">
+                <a href="#teste" class="lp-product-card">
                     <div class="lp-product-image">
-                        <img src="/assets/mudaki/productos/p1.png">
+                        <img
+                            src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/mudaki/p1.png">
                     </div>
                     <h4>Swimwear
                         para Homem</h4>
                 </a>
-                <a href="" class="lp-product-card">
+                <a href="#teste" class="lp-product-card">
                     <div class="lp-product-image">
-                        <img src="/assets/mudaki/productos/p2.png">
+                        <img
+                            src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/mudaki/p2.png">
                     </div>
                     <h4>Fatos de Banho
                         e Biquínis</h4>
                 </a>
-                <a href="" class="lp-product-card">
+                <a href="#teste" class="lp-product-card">
                     <div class="lp-product-image">
-                        <img src="/assets/mudaki/productos/p3.png">
+                        <img
+                            src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/mudaki/p3.png">
                     </div>
                     <h4>Fatos de Banho
                         Infantis</h4>
                 </a>
-                <a href="" class="lp-product-card">
+                <a href="#teste" class="lp-product-card">
                     <div class="lp-product-image">
-                        <img src="/assets/mudaki/productos/p4.png">
+                        <img
+                            src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/mudaki/p4.png">
                     </div>
                     <h4>Fatos de Banho
                         e Biquínis</h4>
@@ -170,10 +190,11 @@
                 <p>Excepteur sint occaecat cupidatat non proident sunt in.</p>
             </div>
             <div class="lp-newsletter-form">
-                <form>
+                <!-- <form>
                     <input type="email" placeholder="Escreve aqui o teu e-mail">
                     <button type="submit" class="yellow">Enviar</button>
-                </form>
+                </form> -->
+                <div class="eg-embed-1e1Ie2BVY"></div>
             </div>
         </section>
 
