--- a/bola_berlim.html
+++ b/bola_berlim.html
@@ -55,28 +55,28 @@
                 <p class="lp-subtitle">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia.</p>
             </div>
             <div class="carrousel">
-                <a href="" class="lp-product-card">
+                <a href="#teste" class="lp-product-card">
                     <div class="lp-product-image">
                         <img src="/assets/bola_de_berlim/produtos/p1.jpg">
                     </div>
                     <h4>After Sun em
                         Gel Corporal</h4>
                 </a>
-                <a href="" class="lp-product-card">
+                <a href="#teste" class="lp-product-card">
                     <div class="lp-product-image">
                         <img src="/assets/bola_de_berlim/produtos/p2.jpg">
                     </div>
                     <h4>Autobronzeadores
                         em Creme Corporal</h4>
                 </a>
-                <a href="" class="lp-product-card">
+                <a href="#teste" class="lp-product-card">
                     <div class="lp-product-image">
                         <img src="/assets/bola_de_berlim/produtos/p3.jpg">
                     </div>
                     <h4>Protetores Solares
                         em Gel Corporal</h4>
                 </a>
-                <a href="" class="lp-product-card">
+                <a href="#teste" class="lp-product-card">
                     <div class="lp-product-image">
                         <img src="/assets/bola_de_berlim/produtos/p4.jpg">
                     </div>
@@ -104,28 +104,28 @@
                 <p class="lp-subtitle">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia.</p>
             </div>
             <div class="carrousel">
-                <a href="" class="lp-product-card">
+                <a href="#teste" class="lp-product-card">
                     <div class="lp-product-image">
                         <img src="/assets/bola_de_berlim/produtos/p1.jpg">
                     </div>
                     <h4>After Sun em
                         Gel Corporal</h4>
                 </a>
-                <a href="" class="lp-product-card">
+                <a href="#teste" class="lp-product-card">
                     <div class="lp-product-image">
                         <img src="/assets/bola_de_berlim/produtos/p2.jpg">
                     </div>
                     <h4>Autobronzeadores
                         em Creme Corporal</h4>
                 </a>
-                <a href="" class="lp-product-card">
+                <a href="#teste" class="lp-product-card">
                     <div class="lp-product-image">
                         <img src="/assets/bola_de_berlim/produtos/p3.jpg">
                     </div>
                     <h4>Protetores Solares
                         em Gel Corporal</h4>
                 </a>
-                <a href="" class="lp-product-card">
+                <a href="#teste" class="lp-product-card">
                     <div class="lp-product-image">
                         <img src="/assets/bola_de_berlim/produtos/p4.jpg">
                     </div>
