Update image to Server source

--- a/bola_berlim.html
+++ b/bola_berlim.html
@@ -22,8 +22,9 @@
                         <div class="main-text-svg">
 
                             <picture>
-                                <img class="text-svg" src="/assets/bola_de_berlim/bola_berlim_text.svg" alt=""
-                                    srcset="">
+                                <img class="text-svg"
+                                    src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/bola_de_berlim/bola_berlim_text.svg"
+                                    alt="" srcset="">
                             </picture>
                         </div>
                     </div>
@@ -43,9 +44,12 @@
             </div>
 
             <div class="lp-images-group">
-                <a class="big-image" href="/"><img src="/assets/bola_de_berlim/moda_acessorios.png"></a>
-                <a class="small-image" href="/"><img src="/assets/bola_de_berlim/smartphones.png"></a>
-                <a class="small-image" href="/"><img src="/assets/bola_de_berlim/imagem_e_som.png"></a>
+                <a class="big-image" href="/"><img
+                        src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/bola_de_berlim/moda_acessorios.png"></a>
+                <a class="small-image" href="/"><img
+                        src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/bola_de_berlim/smartphones.png"></a>
+                <a class="small-image" href="/"><img
+                        src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/bola_de_berlim/imagem_e_som.png"></a>
             </div>
         </section>
 
@@ -57,28 +61,32 @@
             <div class="carrousel">
                 <a href="#teste" class="lp-product-card">
                     <div class="lp-product-image">
-                        <img src="/assets/bola_de_berlim/produtos/p1.jpg">
+                        <img
+                            src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/bola_de_berlim/p1.jpg">
                     </div>
                     <h4>After Sun em
                         Gel Corporal</h4>
                 </a>
                 <a href="#teste" class="lp-product-card">
                     <div class="lp-product-image">
-                        <img src="/assets/bola_de_berlim/produtos/p2.jpg">
+                        <img
+                            src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/bola_de_berlim/p2.jpg">
                     </div>
                     <h4>Autobronzeadores
                         em Creme Corporal</h4>
                 </a>
                 <a href="#teste" class="lp-product-card">
                     <div class="lp-product-image">
-                        <img src="/assets/bola_de_berlim/produtos/p3.jpg">
+                        <img
+                            src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/bola_de_berlim/p3.jpg">
                     </div>
                     <h4>Protetores Solares
                         em Gel Corporal</h4>
                 </a>
                 <a href="#teste" class="lp-product-card">
                     <div class="lp-product-image">
-                        <img src="/assets/bola_de_berlim/produtos/p4.jpg">
+                        <img
+                            src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/bola_de_berlim/p4.jpg">
                     </div>
                     <h4>After Sun em
                         Creme Corporal</h4>
@@ -92,9 +100,12 @@
                 <p class="lp-subtitle">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia.</p>
             </div>
             <div class="lp-images-group">
-                <a href="/"><img src="/assets/bola_de_berlim/desporto.png"></a>
-                <a href="/"><img src="/assets/bola_de_berlim/informatica.png"></a>
-                <a href="/"><img src="/assets/bola_de_berlim/animais.png"></a>
+                <a href="/"><img
+                        src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/bola_de_berlim/desporto.png"></a>
+                <a href="/"><img
+                        src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/bola_de_berlim/informatica.png"></a>
+                <a href="/"><img
+                        src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/bola_de_berlim/animais.png"></a>
             </div>
         </section>
 
@@ -106,28 +117,32 @@
             <div class="carrousel">
                 <a href="#teste" class="lp-product-card">
                     <div class="lp-product-image">
-                        <img src="/assets/bola_de_berlim/produtos/p1.jpg">
+                        <img
+                            src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/bola_de_berlim/p1.jpg">
                     </div>
                     <h4>After Sun em
                         Gel Corporal</h4>
                 </a>
                 <a href="#teste" class="lp-product-card">
                     <div class="lp-product-image">
-                        <img src="/assets/bola_de_berlim/produtos/p2.jpg">
+                        <img
+                            src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/bola_de_berlim/p2.jpg">
                     </div>
                     <h4>Autobronzeadores
                         em Creme Corporal</h4>
                 </a>
                 <a href="#teste" class="lp-product-card">
                     <div class="lp-product-image">
-                        <img src="/assets/bola_de_berlim/produtos/p3.jpg">
+                        <img
+                            src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/bola_de_berlim/p3.jpg">
                     </div>
                     <h4>Protetores Solares
                         em Gel Corporal</h4>
                 </a>
                 <a href="#teste" class="lp-product-card">
                     <div class="lp-product-image">
-                        <img src="/assets/bola_de_berlim/produtos/p4.jpg">
+                        <img
+                            src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/bola_de_berlim/p4.jpg">
                     </div>
                     <h4>After Sun em
                         Creme Corporal</h4>
