--- a/estacao_solar.html
+++ b/estacao_solar.html
@@ -18,8 +18,9 @@
                         <div class="main-text-svg">
 
                             <picture>
-                                <img class="text-svg" src="/assets/estacao_solar/estacao_solar_header_text.svg" alt=""
-                                    srcset="">
+                                <img class="text-svg"
+                                    src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/estacao_solar/estacao_solar_header_text.svg"
+                                    alt="" srcset="">
                             </picture>
                         </div>
                     </div>
@@ -42,9 +43,12 @@
             </div>
 
             <div class="lp-images-group">
-                <a class="big-image" href="/"><img src="/assets/estacao_solar/protetores_solares.png"></a>
-                <a class="small-image" href="/"><img src="/assets/estacao_solar/after_sun.png"></a>
-                <a class="small-image" href="/"><img src="/assets/estacao_solar/auto_bronzeador.png"></a>
+                <a class="big-image" href="/"><img
+                        src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/estacao_solar/protetores_solares.png"></a>
+                <a class="small-image" href="/"><img
+                        src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/estacao_solar/after_sun.png"></a>
+                <a class="small-image" href="/"><img
+                        src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/estacao_solar/auto_bronzeador.png"></a>
             </div>
         </section>
 
@@ -56,28 +60,32 @@
             <div class="carrousel">
                 <a href="#teste" class="lp-product-card">
                     <div class="lp-product-image">
-                        <img src="/assets/estacao_solar/produtos/p1.png">
+                        <img
+                            src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/estacao_solar/p1.png">
                     </div>
                     <h4>After Sun em
                         Gel Corporal</h4>
                 </a>
                 <a href="#teste" class="lp-product-card">
                     <div class="lp-product-image">
-                        <img src="/assets/estacao_solar/produtos/p2.png">
+                        <img
+                            src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/estacao_solar/p2.png">
                     </div>
                     <h4>Autobronzeadores
                         em Creme Corporal</h4>
                 </a>
                 <a href="#teste" class="lp-product-card">
                     <div class="lp-product-image">
-                        <img src="/assets/estacao_solar/produtos/p3.png">
+                        <img
+                            src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/estacao_solar/p3.png">
                     </div>
                     <h4>Protetores Solares
                         em Gel Corporal</h4>
                 </a>
                 <a href="#teste" class="lp-product-card">
                     <div class="lp-product-image">
-                        <img src="/assets/estacao_solar/produtos/p4.png">
+                        <img
+                            src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/estacao_solar/p4.png">
                     </div>
                     <h4>After Sun em
                         Creme Corporal</h4>
