--- a/index.html
+++ b/index.html
@@ -44,77 +44,78 @@
 
         <section class="lp-content lp-big-images">
             <div class="lp-title-group">
-                <h2 class="lp-title">Lorem ipsum dolor sit amet, consectetur adipiscing</h2>
-                <p class="lp-subtitle">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia.</p>
+                <h2 class="lp-title">O Verão pode ser tudo, como vai ser o teu?</h2>
+                <p class="lp-subtitle">Em grande estilo e com muito conforto, a viajar para onde as leituras te levaram.
+                </p>
             </div>
 
             <div class="lp-images-group">
-                <a href="/"><img
+                <a href="https://www.kuantokusta.pt/moda-acessorios"><img
                         src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/mudaki/moda-acessorios.png"></a>
-                <a href="/"><img
+                <a href="https://www.kuantokusta.pt/livros"><img
                         src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/mudaki/cultura-lazer.png"></a>
             </div>
         </section>
 
         <section class="lp-content lp-product-carrousel">
             <div class="lp-title-group">
-                <h2 class="lp-title">Lorem ipsum dolor sit amet, consectetur adipiscing</h2>
-                <p class="lp-subtitle">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia.</p>
+                <h2 class="lp-title">Atira-te ao mar, salta para a piscina</h2>
+                <p class="lp-subtitle">Mas não fiques a secar!</p>
             </div>
             <div class="carrousel">
-                <a href="#teste" class="lp-product-card">
+                <a href="https://www.kuantokusta.pt/c/2724/toalhas-de-praia" class="lp-product-card">
                     <div class="lp-product-image">
                         <img
                             src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/mudaki/prod_1.png">
                     </div>
-                    <h4>Inspirações Portuguesas</h4>
+                    <h4>Toalhas de praia</h4>
                 </a>
-                <a href="#teste" class="lp-product-card">
+                <a href="https://www.kuantokusta.pt/saude-beleza/Solares" class="lp-product-card">
                     <div class="lp-product-image">
                         <img
-                            src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/mudaki/prod_2.png">
+                            src="https://s1.kuantokusta.pt/img_upload/produtos_saudebeleza/702197_3_la-roche-posay-anthelios-uvmune-fluido-sem-perfume-spf50-50ml.jpg">
                     </div>
-                    <h4>Kariban</h4>
+                    <h4>Solares</h4>
                 </a>
-                <a href="#teste" class="lp-product-card">
+                <a href="https://www.kuantokusta.pt/c/695/brinquedos-e-acessorios-de-praia" class="lp-product-card">
                     <div class="lp-product-image">
                         <img
-                            src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/mudaki/prod_3.png">
+                            src="https://s1.kuantokusta.pt/img_upload/produtos_brinquedospuericultura/297455_3_conjunto-de-praia-nordico.jpg">
                     </div>
-                    <h4>Pitada</h4>
+                    <h4>Brinquedos de praia</h4>
                 </a>
-                <a href="#teste" class="lp-product-card">
+                <a href="https://www.kuantokusta.pt/c/464/geleiras-eletricas" class="lp-product-card">
                     <div class="lp-product-image">
                         <img
-                            src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/mudaki/prod_4.png">
+                            src="https://s1.kuantokusta.pt/img_upload/produtos_electrodomesticos/489616_3_orbegozo-geleira-electrica-nv-4100.jpg">
                     </div>
-                    <h4>Gwery</h4>
+                    <h4>Geladeiras</h4>
                 </a>
             </div>
         </section>
 
         <section class="lp-content lp-big-images">
             <div class="lp-title-group">
-                <h2 class="lp-title">Lorem ipsum dolor sit amet, consectetur adipiscing</h2>
-                <p class="lp-subtitle">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia.</p>
+                <h2 class="lp-title">Entra neste verão em grande estilo</h2>
+                <p class="lp-subtitle">Moda para Homem, Mulher e Criança aos melhores preços.</p>
             </div>
             <div class="lp-images-group">
-                <a href="/"><img
+                <a href="https://www.kuantokusta.pt/moda-acessorios/Homem"><img
                         src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/mudaki/homem.png"></a>
-                <a href="/"><img
+                <a href="https://www.kuantokusta.pt/moda-acessorios/Mulher"><img
                         src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/mudaki/mulher.png"></a>
-                <a href="/"><img
+                <a href="https://www.kuantokusta.pt/moda-acessorios/Crianca-e-Bebe"><img
                         src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/mudaki/crianca.png"></a>
             </div>
         </section>
 
         <section class="lp-content lp-product-carrousel">
             <div class="lp-title-group">
-                <h2 class="lp-title">Lorem ipsum dolor sit amet, consectetur adipiscing</h2>
-                <p class="lp-subtitle">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia.</p>
+                <h2 class="lp-title">O Verão pode ser tudo, como vai ser o teu?</h2>
+                <p class="lp-subtitle">pequenino, com bolas, às riscas, de cores fortes. Tu escolhes!</p>
             </div>
             <div class="carrousel">
-                <a href="#teste" class="lp-product-card">
+                <a href="https://www.kuantokusta.pt/c/556/swimwear" class="lp-product-card">
                     <div class="lp-product-image">
                         <img
                             src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/mudaki/p1.png">
@@ -122,7 +123,7 @@
                     <h4>Swimwear
                         para Homem</h4>
                 </a>
-                <a href="#teste" class="lp-product-card">
+                <a href="https://www.kuantokusta.pt/c/529/fatos-de-banho-e-biquinis" class="lp-product-card">
                     <div class="lp-product-image">
                         <img
                             src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/mudaki/p2.png">
@@ -130,7 +131,7 @@
                     <h4>Fatos de Banho
                         e Biquínis</h4>
                 </a>
-                <a href="#teste" class="lp-product-card">
+                <a href="https://www.kuantokusta.pt/c/581/fatos-de-banho" class="lp-product-card">
                     <div class="lp-product-image">
                         <img
                             src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/mudaki/p3.png">
@@ -138,63 +139,78 @@
                     <h4>Fatos de Banho
                         Infantis</h4>
                 </a>
-                <a href="#teste" class="lp-product-card">
+                <a href="https://www.kuantokusta.pt/c/634/chinelos" class="lp-product-card">
                     <div class="lp-product-image">
                         <img
                             src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/mudaki/p4.png">
                     </div>
-                    <h4>Fatos de Banho
-                        e Biquínis</h4>
+                    <h4>Chinelos</h4>
                 </a>
             </div>
         </section>
 
         <section class="lp-content lp-newsletter">
             <div class="lp-newsletter-title">
-                <svg width="95" height="149" viewBox="0 0 95 149" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <g clip-path="url(#clip0_0_1)">
-                        <path
-                            d="M22.5354 111.141L21.8774 83.9997H29.444C35.0367 83.9997 40.136 83.5062 44.7417 82.5192C49.3475 81.5323 53.0212 79.6132 55.7627 76.762C58.5042 73.9108 59.875 69.7437 59.875 64.2607C59.875 58.9969 58.2849 54.8846 55.1047 51.9238C51.9246 48.8533 47.7026 47.318 42.4389 47.318C36.9558 47.318 32.679 48.8533 29.6085 51.9238C26.538 54.8846 25.0027 58.9421 25.0027 64.0962H5.09924C4.98958 57.5165 6.41518 51.6496 9.37603 46.4956C12.3369 41.3415 16.6137 37.284 22.2064 34.3232C27.9088 31.3623 34.7078 29.8819 42.6034 29.8819C49.9507 29.8819 56.4207 31.2527 62.0134 33.9942C67.7158 36.7357 72.157 40.6835 75.3372 45.8376C78.627 50.882 80.272 57.0779 80.272 64.4252C80.272 71.9918 78.5722 78.2425 75.1727 83.1772C71.8829 88.112 67.3319 91.7856 61.5199 94.1982C55.8175 96.6107 49.183 97.8718 41.6164 97.9815L41.1229 111.141H22.5354ZM31.9114 148.151C28.0733 148.151 24.8931 146.945 22.3709 144.533C19.9583 142.12 18.7521 139.214 18.7521 135.815C18.7521 132.305 19.9583 129.345 22.3709 126.932C24.8931 124.519 28.0733 123.313 31.9114 123.313C35.7495 123.313 38.8749 124.519 41.2874 126.932C43.7 129.345 44.9062 132.305 44.9062 135.815C44.9062 139.214 43.7 142.12 41.2874 144.533C38.8749 146.945 35.7495 148.151 31.9114 148.151Z"
+
+                <div class="title">
+                    <svg width="95" height="149" viewBox="0 0 95 149" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g clip-path="url(#clip0_0_1)">
+                            <path
+                                d="M22.5354 111.141L21.8774 83.9997H29.444C35.0367 83.9997 40.136 83.5062 44.7417 82.5192C49.3475 81.5323 53.0212 79.6132 55.7627 76.762C58.5042 73.9108 59.875 69.7437 59.875 64.2607C59.875 58.9969 58.2849 54.8846 55.1047 51.9238C51.9246 48.8533 47.7026 47.318 42.4389 47.318C36.9558 47.318 32.679 48.8533 29.6085 51.9238C26.538 54.8846 25.0027 58.9421 25.0027 64.0962H5.09924C4.98958 57.5165 6.41518 51.6496 9.37603 46.4956C12.3369 41.3415 16.6137 37.284 22.2064 34.3232C27.9088 31.3623 34.7078 29.8819 42.6034 29.8819C49.9507 29.8819 56.4207 31.2527 62.0134 33.9942C67.7158 36.7357 72.157 40.6835 75.3372 45.8376C78.627 50.882 80.272 57.0779 80.272 64.4252C80.272 71.9918 78.5722 78.2425 75.1727 83.1772C71.8829 88.112 67.3319 91.7856 61.5199 94.1982C55.8175 96.6107 49.183 97.8718 41.6164 97.9815L41.1229 111.141H22.5354ZM31.9114 148.151C28.0733 148.151 24.8931 146.945 22.3709 144.533C19.9583 142.12 18.7521 139.214 18.7521 135.815C18.7521 132.305 19.9583 129.345 22.3709 126.932C24.8931 124.519 28.0733 123.313 31.9114 123.313C35.7495 123.313 38.8749 124.519 41.2874 126.932C43.7 129.345 44.9062 132.305 44.9062 135.815C44.9062 139.214 43.7 142.12 41.2874 144.533C38.8749 146.945 35.7495 148.151 31.9114 148.151Z"
+                                fill="white" />
+                        </g>
+                        <path opacity="0.7"
+                            d="M33.4438 136.582L31.7812 137.541V148.289H35.1063V137.541L33.4441 136.582H33.4438ZM35.1063 121.035H31.7812V131.783L33.4438 132.743L35.1063 131.783V121.035Z"
                             fill="white" />
-                    </g>
-                    <path opacity="0.7"
-                        d="M33.4438 136.582L31.7812 137.541V148.289H35.1063V137.541L33.4441 136.582H33.4438ZM35.1063 121.035H31.7812V131.783L33.4438 132.743L35.1063 131.783V121.035Z"
-                        fill="white" />
-                    <path opacity="0.7"
-                        d="M22.4731 126.409L20.8105 129.288L30.1187 134.662L20.8105 140.036L22.4731 142.915L31.7809 137.541V135.622L30.1187 134.662L31.7809 133.702V131.783L22.4731 126.409Z"
-                        fill="white" />
-                    <path opacity="0.91"
-                        d="M31.7812 135.623V137.542L33.4438 136.582L31.7812 135.623ZM31.7812 131.784V133.703L33.4438 132.743L31.7812 131.784"
-                        fill="white" />
-                    <path opacity="0.7"
-                        d="M44.4136 126.409L35.1055 131.783V133.702L36.7952 134.678L35.1055 135.632V137.541L44.4136 142.915L46.0762 140.036H46.0759L36.768 134.662L46.0759 129.288L44.4136 126.409Z"
-                        fill="white" />
-                    <path opacity="0.91"
-                        d="M35.1076 135.633L34.2703 136.105L33.4453 136.582L35.1076 137.542V135.633ZM35.1076 131.783L33.4453 132.743L35.1076 133.703V131.783"
-                        fill="white" />
-                    <path opacity="0.91"
-                        d="M31.7814 133.702L30.1191 134.662L31.7814 135.622V133.702ZM35.1062 133.702V135.632L36.7959 134.677L35.1065 133.702"
-                        fill="white" />
-                    <path opacity="0.97"
-                        d="M33.4438 132.743L31.7812 133.703V135.622L33.4438 136.582L34.2691 136.106L35.106 135.633V133.703L33.4438 132.743Z"
-                        fill="white" />
-                    <defs>
-                        <clipPath id="clip0_0_1">
-                            <rect width="94.7472" height="119.75" fill="white" />
-                        </clipPath>
-                    </defs>
-                </svg>
-                <h4>Lorem ipsum sit amet dolor</h4>
-
-
-                <p>Excepteur sint occaecat cupidatat non proident sunt in.</p>
+                        <path opacity="0.7"
+                            d="M22.4731 126.409L20.8105 129.288L30.1187 134.662L20.8105 140.036L22.4731 142.915L31.7809 137.541V135.622L30.1187 134.662L31.7809 133.702V131.783L22.4731 126.409Z"
+                            fill="white" />
+                        <path opacity="0.91"
+                            d="M31.7812 135.623V137.542L33.4438 136.582L31.7812 135.623ZM31.7812 131.784V133.703L33.4438 132.743L31.7812 131.784"
+                            fill="white" />
+                        <path opacity="0.7"
+                            d="M44.4136 126.409L35.1055 131.783V133.702L36.7952 134.678L35.1055 135.632V137.541L44.4136 142.915L46.0762 140.036H46.0759L36.768 134.662L46.0759 129.288L44.4136 126.409Z"
+                            fill="white" />
+                        <path opacity="0.91"
+                            d="M35.1076 135.633L34.2703 136.105L33.4453 136.582L35.1076 137.542V135.633ZM35.1076 131.783L33.4453 132.743L35.1076 133.703V131.783"
+                            fill="white" />
+                        <path opacity="0.91"
+                            d="M31.7814 133.702L30.1191 134.662L31.7814 135.622V133.702ZM35.1062 133.702V135.632L36.7959 134.677L35.1065 133.702"
+                            fill="white" />
+                        <path opacity="0.97"
+                            d="M33.4438 132.743L31.7812 133.703V135.622L33.4438 136.582L34.2691 136.106L35.106 135.633V133.703L33.4438 132.743Z"
+                            fill="white" />
+                        <defs>
+                            <clipPath id="clip0_0_1">
+                                <rect width="94.7472" height="119.75" fill="white" />
+                            </clipPath>
+                        </defs>
+                    </svg>
+                    <h4>Ficaste a boiar</h4>
+                    <p>Subscreve as newsletters das poupanças.</p>
+                </div>
             </div>
             <div class="lp-newsletter-form">
                 <!-- <form>
                     <input type="email" placeholder="Escreve aqui o teu e-mail">
                     <button type="submit" class="yellow">Enviar</button>
                 </form> -->
-                <div class="eg-embed-1e1Ie2BVY"></div>
+                <script type="text/javascript" id="script_1e1Le2BVYe31xxdq0W1e8f165d2d">
+                    var _egoiLoaderMulti = _egoiLoaderMulti || [];
+                    var _egoiLoaderValues = [];
+                    _egoiLoaderValues.push(["_setForm", "1e1Le2BVYe31xxdq0W1e8f165d2d"]);
+                    _egoiLoaderValues.push(["_setResource", "12adbc7220d4c958a5d925b0e5148560"]);
+                    _egoiLoaderValues.push(["_setUrl", "https://32.e-goi.com/"]);
+                    _egoiLoaderValues.push(["_setType", "normal"]);
+                    _egoiLoaderValues.push(["_setWidth", "350"]);
+                    _egoiLoaderValues.push(["_setHeight", "275"]);
+                    _egoiLoaderMulti.push(_egoiLoaderValues);
+                    (function () {
+                        var egoi = document.createElement("script"); egoi.type = "text/javascript"; egoi.async = true;
+                        egoi.src = "https://32.e-goi.com/include/javascript/egoi.js";
+                        var e = document.getElementById("script_1e1Le2BVYe31xxdq0W1e8f165d2d"); e.parentNode.insertBefore(egoi, e);
+                    })();
+                </script>
             </div>
         </section>
 
