--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             <!-- <img class="logo-svg" src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/mudaki/kk_logo.svg" alt="" srcset=""> -->
                         </div>
                     </div>
-                    <button class="lp-primary">sabe mais</button>
+                    <!-- <button class="lp-primary">sabe mais</button> -->
                 </div>
 
             </div>
@@ -142,7 +142,7 @@
                 <a href="https://www.kuantokusta.pt/c/634/chinelos" class="lp-product-card">
                     <div class="lp-product-image">
                         <img
-                            src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/mudaki/p4.png">
+                            src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/bola_de_berlim/p1.jpg">
                     </div>
                     <h4>Chinelos</h4>
                 </a>
@@ -191,10 +191,6 @@
                 </div>
             </div>
             <div class="lp-newsletter-form">
-                <!-- <form>
-                    <input type="email" placeholder="Escreve aqui o teu e-mail">
-                    <button type="submit" class="yellow">Enviar</button>
-                </form> -->
                 <script type="text/javascript" id="script_1e1Le2BVYe31xxdq0W1e8f165d2d">
                     var _egoiLoaderMulti = _egoiLoaderMulti || [];
                     var _egoiLoaderValues = [];
@@ -211,6 +207,7 @@
                         var e = document.getElementById("script_1e1Le2BVYe31xxdq0W1e8f165d2d"); e.parentNode.insertBefore(egoi, e);
                     })();
                 </script>
+                <div id="a1e1Le2BVYe31xxdq0W1e8f165d2d"></div>
             </div>
         </section>
 
