--- a/bola_berlim.html
+++ b/bola_berlim.html
@@ -14,7 +14,8 @@
 
             <div class="grid">
                 <div class="half-column header-image">
-                    <img class="main-image" src="assets/bola_de_berlim/header_main.jpg" />
+                    <img class="main-image"
+                        src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/bola_de_berlim/header_main.jpg" />
                 </div>
 
                 <div class="half-column header-text">
