--- a/estacao_solar.html
+++ b/estacao_solar.html
@@ -28,8 +28,10 @@
                 </div>
 
                 <div class="half-column header-image">
-                    <img class="main-image" src="assets/estacao_solar/header-main.jpg" />
-                    <img class="floating-logo" src="assets/estacao_solar/kk_logo.svg" />
+                    <img class="main-image"
+                        src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/estacao_solar/header-main.jpg" />
+                    <img class="floating-logo"
+                        src="https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/estacao_solar/kk_logo.svg" />
                 </div>
             </div>
 
